--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -7,6 +7,8 @@
     android:background="#f4f5f6"
     android:orientation="vertical">
 
+    <include layout="@layout/layout_title" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -115,6 +117,7 @@
 
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/tv_diamond"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -142,6 +145,7 @@
             </LinearLayout>
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/img_ad"
                 android:layout_width="match_parent"
                 android:layout_height="110dp"
