--- a/app/src/main/res/layout/item_live.xml
+++ b/app/src/main/res/layout/item_live.xml
@@ -47,4 +47,18 @@
         android:textStyle="bold"
         android:visibility="visible" />
 
+    <TextView
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/broder_main_color"
+        android:paddingBottom="1dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingTop="1dp"
+        android:text="弹幕"
+        android:textColor="@color/white"
+        android:textSize="10sp" />
+
 </RelativeLayout>
