--- a/app/src/main/res/layout/view_play_control.xml
+++ b/app/src/main/res/layout/view_play_control.xml
@@ -51,6 +51,31 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_tip1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layout"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/broder_ad"
+            android:paddingBottom="3dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="6dp"
+            android:paddingTop="3dp"
+            android:textColor="#fff"
+            android:textSize="13sp" />
+
+        <ImageView
+            android:layout_below="@+id/layout"
+            android:id="@+id/imageView"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="32dp" />
+
         <ImageView
             android:id="@+id/img_collect"
             android:layout_width="wrap_content"
@@ -67,7 +92,6 @@
             android:layout_height="123dp"
             android:layout_centerInParent="true"
             android:background="@drawable/loading_live" />
-
 
 
         <RelativeLayout
@@ -104,37 +128,36 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_alignTop="@+id/layout_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/layout_bottom"
             android:orientation="horizontal">
 
             <EditText
-                android:padding="4dp"
-                android:textSize="13sp"
-                android:background="@drawable/broder_layout_bg"
-                android:layout_marginLeft="10dp"
-                android:layout_weight="1"
-                android:hint="请输入弹幕"
                 android:id="@+id/et_input"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/broder_layout_bg"
+                android:hint="请输入弹幕"
+                android:padding="4dp"
+                android:textSize="13sp" />
 
             <TextView
-                android:layout_marginRight="10dp"
                 android:id="@+id/tv_send"
-                android:layout_marginLeft="10dp"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:paddingLeft="3dp"
-                android:paddingRight="3dp"
-                android:textColor="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="发送"
-                android:textSize="13sp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:background="@drawable/broder_main_color"
-                />
+                android:paddingBottom="2dp"
+                android:paddingLeft="3dp"
+                android:paddingRight="3dp"
+                android:paddingTop="2dp"
+                android:text="发送"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
 
 
         </LinearLayout>
@@ -150,7 +173,6 @@
 
 
         <TextView
-            android:visibility="gone"
             android:id="@+id/tv_tips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -159,7 +181,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="100dp"
             android:textColor="#fff"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:visibility="gone" />
 
     </RelativeLayout>
 </merge>
